--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-just-parallax": "^3.1.16",
     "react-router-dom": "^7.9.4",
     "scroll-lock": "^2.1.5"
   },
